--- a/src/components/LandingPage/LatestPosts.css
+++ b/src/components/LandingPage/LatestPosts.css
@@ -71,6 +71,19 @@
     text-align: center;
 }
 
+.post-container .post-type {
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: white;
+    padding: 0.4rem 0.8rem;
+    border-radius: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.05rem;
+    margin-bottom: 1rem;
+    display: inline-block;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .post-container h2 {
     font-size: 2rem;
     font-weight: 700;
